# onionshare

./: CHANGELOG.md  LICENSE.txt  RELEASE.md
docs/: build.sh  pyproject.toml
docs/gettext/: advanced.pot  develop.pot  features.pot  help.pot  index.pot  install.pot  security.pot  sphinx.pot  tor.pot
docs/gettext/.doctrees/: advanced.doctree  develop.doctree  environment.pickle  features.doctree  help.doctree  index.doctree  install.doctree  security.doctree  tor.doctree
docs/source/: conf.py
docs/source/locale/af/LC_MESSAGES/: advanced.po  develop.po  features.po  help.po  index.po  install.po  security.po  sphinx.po  tor.po
docs/source/locale/am/LC_MESSAGES/: advanced.po  develop.po  features.po  help.po  index.po  install.po  security.po  sphinx.po  tor.po
docs/source/locale/ar/LC_MESSAGES/: advanced.po  features.po  help.po  index.po  install.po  security.po  sphinx.po  tor.po
docs/source/locale/ay/LC_MESSAGES/: advanced.po  develop.po  features.po  help.po  index.po  install.po  security.po  tor.po
docs/source/locale/be/LC_MESSAGES/: advanced.po  develop.po  features.po  help.po  index.po  install.po  security.po  sphinx.po  tor.po
docs/source/locale/bg/LC_MESSAGES/: advanced.po  develop.po  features.po  help.po  index.po  install.po  security.po  sphinx.po  tor.po
docs/source/locale/bn/LC_MESSAGES/: advanced.po  develop.po  features.po  help.po  index.po  install.po  security.po  sphinx.po  tor.po
docs/source/locale/bo/LC_MESSAGES/: advanced.po  develop.po  features.po  help.po  index.po  install.po  security.po  sphinx.po  tor.po
(+511 files in other folders)
