[tool.poetry]
name = "onionshare-docs"
version = "0.1.0"
description = ""
authors = ["Micah Lee <micah@micahflee.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
sphinx = "*"
sphinx-rtd-theme = "*"
sphinx-intl = "*"
httpx = "*"
urllib3 = "^2.7"
requests = "^2.33"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
